Further cut-outs